# Drifting-Actor-Policy

./: .dockerignore  .gitignore  BACKGROUND_KNOWLEDGE.md  LICENSE  PROPOSAL.md  README.md  README_CODEBASE.md  data_train.sh  download_from_hf.sh  mixture_test.sh  pyproject.toml  setup.py  slurm_train.sh  test.sh  upload_datasets.sh  upload_datasets_parallel.sh
configs/: config.yaml  dataset_control_freq.json  zero2.json
configs/data/: multi_embodiment.yaml  rlbench.yaml
configs/model/: dit_b2.yaml  dit_l2.yaml
configs/training/: baseline.yaml  large_scale.yaml  pretrain_available_datasets.yaml  pretrain_h100_1node.yaml  pretrain_h100_2node.yaml  pretrain_h200_15node.yaml
docker/: Dockerfile.base  Dockerfile.calvin  Dockerfile.libero  Dockerfile.pretrain  Dockerfile.prod  Dockerfile.rlbench
docker/scripts/: start_xvfb.sh
drifting_vla/: __init__.py
drifting_vla/data/: __init__.py  action_mapping.py  base_dataset.py  dexgraspnet_dataset.py  episode_dataset.py  lerobot_dataset.py  rlbench_collector.py  rlbench_dataset.py  sample_queue.py  transforms.py  unified_dataset.py
drifting_vla/envs/: __init__.py  base_env.py  rlbench_env.py
drifting_vla/inference/: __init__.py  policy.py  rollout.py
drifting_vla/logging/: __init__.py  metrics.py  themes.py  visualizations.py  wandb_logger.py
drifting_vla/models/: __init__.py  action_decoder.py  dit.py  drifting_vla.py  feature_encoder.py  fusion.py  language_encoder.py  (+2 more)
requirements/: base.txt  dev.txt  rlbench.txt
scripts/: collect_demos.py  convert_to_episodes.py  download_datasets.py  download_rlbench_data.py  evaluate.py  generate_sample_videos.py  precompute_vlm_features.py  prepare_data.py  render_dexgraspnet.py  simulate_eval.py  test_nccl.py  train.py  validate_training.py  verify_dataset.py  visualize_episode.py
tests/: __init__.py  test_data.py  test_drifting_field.py  test_losses.py  test_models.py
(+88 files in other folders)
